# c_elegans_chemotaxis

./: Cargo.toml  LICENSE  README.md  genetic_algorithm_setting.toml  klinotaxis_analysis_setting.toml  python_scripts_setting.toml  requirements.txt
data/experiment/: FigS6_WT_fed_C_vs_NC_100mM.txt  FigS6_WT_fed_C_vs_NC_25mM.txt  FigS6_WT_fed_C_vs_NC_50mM.txt  FigS6_WT_starved_C_vs_NC_100mM.txt  FigS6_WT_starved_C_vs_NC_25mM.txt  FigS6_WT_starved_C_vs_NC_50mM.txt
data/gene/: README_en.md  README_ja.md  Result.json  Result_aiy_aiz_negative.json
data/gene/concentration_memory/: Result_aiy_aiz_negative_0.json  Result_aiy_aiz_negative_1.json
data/gene/starvation/bias/: Result_smb.json  Result_smb_0.json
data/gene/starvation/synapse/: Result_aiz_smb.json  Result_aiz_smb_0.json
data/simulation/: README_ja.md
data/simulation/with_constraining_AIY-AIZ/: bearing_vs_curving_rate_0.txt  nomal_gradient_vs_curving_rate_0.txt  translational_gradient_vs_curving_rate_0.txt
notebook/: example.ipynb
scripts/: analysis.py  animation.py  figure.py  load.py  oed.py
src/: lib.rs  main.rs
src/analysis/: analytical_control.rs  bearing.rs  curving_rate.rs  klinotaxis.rs  mod.rs  normal_gradient.rs  read_result.rs  setting.rs  translational_gradient.rs
src/genetic_algorithm/: crossover.rs  evaluate.rs  ga.rs  genetic_algorithm_biologically_correct.rs  genetic_algorithm_constrain_aiy_aiz.rs  genetic_algorithm_normal.rs  mod.rs  mutation.rs  population.rs  setting.rs
src/simulation/: chemotaxis_index.rs  gene.rs  mod.rs  setting.rs
(+44 files in other folders)
