[package]
name = "c_elegans_chemotaxis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = '0.9.1'
rand_distr = '0.5.1'
rayon = '1.10.0'
chrono = '0.4.41'
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.0"
